# segnet

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
src/: net_seg_test.cpp  net_seg_train.cpp  test_augments.cpp  test_torch.cpp
src/data/: CityscapesDataset.cpp  CityscapesDataset.h  Comma10kDataset.cpp  Comma10kDataset.h
src/network/blocks/: UNetBlocks.h
src/network/models/: DepthModel.h  UNetModel.h
src/utils/: augmentations.h
